force-app/main/default/objects/redwing__LMS_Settings__c/redwing__LMS_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings used by the LMS Core app</description>
    <label>LMS Settings</label>
</CustomObject>