force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Achievement_Builder_Field_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__Achievement_Builder_Field_Set_Name__c</fullName>
    <inlineHelpText>Field Set on Achievement object to add additional fields to Detail tab in the Achievement builder.</inlineHelpText>
    <label>Achievement Builder Field Set Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>