force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Achievement_Community_Page__c.field-meta.xml
<CustomField>
    <fullName>redwing__Achievement_Community_Page__c</fullName>
    <inlineHelpText>Use this custom setting only you would like to override the community Achievement Details page for users in email notifications. For example, “/s/achievement-detail-standard-custom”. If empty, default /s/achievement-detail-standard page will be used.</inlineHelpText>
    <label>Achievement Community Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>