force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Achievement_Expiration_Notification__c.field-meta.xml
<CustomField>
    <fullName>redwing__Achievement_Expiration_Notification__c</fullName>
    <inlineHelpText>Number of days before Expiration Date to send Achievement Expiration email notifications to users. If empty, notification will not be sent.</inlineHelpText>
    <label>Achievement Expiration Notification</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>