force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Achievement_LEX_Page__c.field-meta.xml
<CustomField>
    <fullName>redwing__Achievement_LEX_Page__c</fullName>
    <inlineHelpText>Use this custom setting only you would like to override the internal Achievement Details page for users in email notifications. For example, “achievement_detail_standard_ custom”. If empty, default achievement_detail_standard page will be used.</inlineHelpText>
    <label>Achievement LEX Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>