force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Achievement_Print_URL__c.field-meta.xml
<CustomField>
    <fullName>redwing__Achievement_Print_URL__c</fullName>
    <inlineHelpText>VF page url (e.g. /apex/PrintCertificate) to be used for printing Achievements</inlineHelpText>
    <label>Achievement Print URL</label>
    <length>60</length>
    <type>Text</type>
</CustomField>