force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Achievement_Renewal_Close_Notification__c.field-meta.xml
<CustomField>
    <fullName>redwing__Achievement_Renewal_Close_Notification__c</fullName>
    <inlineHelpText>Number of days before Renewal Window Close Date to send Achievement Renewal Closed email notifications to users. If empty, notification will not be sent.</inlineHelpText>
    <label>Achievement Renewal Close Notification</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>