force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Achievement_Renewal_Open_Notification__c.field-meta.xml
<CustomField>
    <fullName>redwing__Achievement_Renewal_Open_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option if you would like users to get Achievement Renewal Available email notifications when Renewal Window Open Date comes.</inlineHelpText>
    <label>Achievement Renewal Open Notification</label>
    <type>Checkbox</type>
</CustomField>