force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__All_ILT_Classes_Required__c.field-meta.xml
<CustomField>
    <fullName>redwing__All_ILT_Classes_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, users must attend all classes of an event to get completion credit</inlineHelpText>
    <label>All ILT Classes Required</label>
    <type>Checkbox</type>
</CustomField>