force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Allow_ILT_Class_Registration_Conflicts__c.field-meta.xml
<CustomField>
    <fullName>redwing__Allow_ILT_Class_Registration_Conflicts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option if you would like to allow users to register to ILT Classes even if they are already registered for a conflicting ILT Class.</inlineHelpText>
    <label>Allow ILT Class Registration Conflicts</label>
    <type>Checkbox</type>
</CustomField>