force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Allow_ILT_Registration_After_Class_Start__c.field-meta.xml
<CustomField>
    <fullName>redwing__Allow_ILT_Registration_After_Class_Start__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option if you would like to allow users to register to ILT Classes even after they start.</inlineHelpText>
    <label>Allow ILT Registration After Class Start</label>
    <type>Checkbox</type>
</CustomField>