force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Assignment_Due_Date_Notification__c.field-meta.xml
<CustomField>
    <fullName>redwing__Assignment_Due_Date_Notification__c</fullName>
    <inlineHelpText>Number of days before Due Date to send Due Date reminder email notifications to users. If empty, notification will not be sent.The value is also used for the &quot;Due Date is coming&quot; highlighting on the user experience. If empty, 10 days is used as default.</inlineHelpText>
    <label>Assignment Due Date Notification</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>