force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Assignment_Requests_Processing_Interval__c.field-meta.xml
<CustomField>
    <fullName>redwing__Assignment_Requests_Processing_Interval__c</fullName>
    <inlineHelpText>Stores a value in minutes which indicates the frequency of running the Learning Assignment Requests job. If this field is empty, then by default an interval of 30 minutes is used.</inlineHelpText>
    <label>Assignment Requests Processing Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>