force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Check_For_ILT_Instructor_PS__c.field-meta.xml
<CustomField>
    <fullName>redwing__Check_For_ILT_Instructor_PS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, only users with the LMS ILT Instructor permission set will be available when adding instructors to ILT Classes and Sessions.</inlineHelpText>
    <label>Check for ILT Instructor PS</label>
    <type>Checkbox</type>
</CustomField>