force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Check_Session_Registration_Conflict__c.field-meta.xml
<CustomField>
    <fullName>redwing__Check_Session_Registration_Conflict__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Session Registration Conflict</label>
    <type>Checkbox</type>
</CustomField>