force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Checkout_Plugin__c.field-meta.xml
<CustomField>
    <fullName>redwing__Checkout_Plugin__c</fullName>
    <inlineHelpText>Name of the checkout plugin used by the LMS</inlineHelpText>
    <label>Checkout Plugin</label>
    <length>60</length>
    <type>Text</type>
</CustomField>