force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Communities_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>redwing__Communities_Page_URL__c</fullName>
    <inlineHelpText>URL for the learning page in your Community (e.g. /s/learning)</inlineHelpText>
    <label>Communities Page URL</label>
    <length>60</length>
    <type>Text</type>
</CustomField>