force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Community_Custom_Domain__c.field-meta.xml
<CustomField>
    <fullName>redwing__Community_Custom_Domain__c</fullName>
    <inlineHelpText>Custom Domain to be used when building community URLs</inlineHelpText>
    <label>Community Custom Domain</label>
    <length>60</length>
    <type>Text</type>
</CustomField>