force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Company_Logo__c.field-meta.xml
<CustomField>
    <fullName>redwing__Company_Logo__c</fullName>
    <description>URL for your company logo</description>
    <inlineHelpText>URL for your company logo</inlineHelpText>
    <label>Company Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>