force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Copy_ILT_Event_Data_To_Classes__c.field-meta.xml
<CustomField>
    <fullName>redwing__Copy_ILT_Event_Data_To_Classes__c</fullName>
    <label>Copy ILT Event Data to Classes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>