force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Custom_Leader_Board_Report__c.field-meta.xml
<CustomField>
    <fullName>redwing__Custom_Leader_Board_Report__c</fullName>
    <description>Name of a custom report used for displaying leaderboard results</description>
    <inlineHelpText>Name of a custom report used for displaying leaderboard results</inlineHelpText>
    <label>Custom Leader Board Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>