force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Custom_Logout_URL__c.field-meta.xml
<CustomField>
    <fullName>redwing__Custom_Logout_URL__c</fullName>
    <description>URL used by the logout button</description>
    <inlineHelpText>Custom Logout link used in the app header (e.g. /secur/logout.jsp)</inlineHelpText>
    <label>Custom Logout URL</label>
    <length>150</length>
    <type>Text</type>
</CustomField>