force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Custom_Section_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__Custom_Section_Name__c</fullName>
    <description>Name of a custom section displayed in the header</description>
    <inlineHelpText>Name of a custom section displayed in the header</inlineHelpText>
    <label>Custom Section Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>