force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Default_Enable_Chatter_Notifications__c.field-meta.xml
<CustomField>
    <fullName>redwing__Default_Enable_Chatter_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Enable Chatter Notifications</label>
    <type>Checkbox</type>
</CustomField>