force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Default_Sync_Progress_Across_Assignments__c.field-meta.xml
<CustomField>
    <fullName>redwing__Default_Sync_Progress_Across_Assignments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Sync Progress Across Assignments</label>
    <type>Checkbox</type>
</CustomField>