force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Default_Task_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>redwing__Default_Task_Notification_Email__c</fullName>
    <inlineHelpText>Default FROM email address for Task Approval notifications. Note that additional configuration of Organization-Wide Address is required.</inlineHelpText>
    <label>Default Task Notification Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>