force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Disable_Assignments_Version_Backup__c.field-meta.xml
<CustomField>
    <fullName>redwing__Disable_Assignments_Version_Backup__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to disable assignments backup when new versions are published</inlineHelpText>
    <label>Disable Assignments Version Backup</label>
    <type>Checkbox</type>
</CustomField>