force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Disable_Async_Permission_Rules__c.field-meta.xml
<CustomField>
    <fullName>redwing__Disable_Async_Permission_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to avoid running permission rules in async mode</inlineHelpText>
    <label>Disable Async Permission Rules</label>
    <type>Checkbox</type>
</CustomField>