force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Disable_Feed_Item_Audit_Fields__c.field-meta.xml
<CustomField>
    <fullName>redwing__Disable_Feed_Item_Audit_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option if you&apos;d like to disable setting the created by id for achievement feed items</inlineHelpText>
    <label>Disable Audit Fields for Feed Items</label>
    <type>Checkbox</type>
</CustomField>