force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Disable_Future_Progress_Calculation__c.field-meta.xml
<CustomField>
    <fullName>redwing__Disable_Future_Progress_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to force Learning Plan progress calculation in a single transaction</inlineHelpText>
    <label>Disable Future Progress Calculation</label>
    <type>Checkbox</type>
</CustomField>