force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Disable_Leaderboard__c.field-meta.xml
<CustomField>
    <fullName>redwing__Disable_Leaderboard__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option if you&apos;d like disable the homepage leaderboard</inlineHelpText>
    <label>Disable Leaderboard</label>
    <type>Checkbox</type>
</CustomField>