force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Disable_Leaderboard_Refresh_On_Load__c.field-meta.xml
<CustomField>
    <fullName>redwing__Disable_Leaderboard_Refresh_On_Load__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option if you&apos;d like disable leaderboard cache refresh on page load</inlineHelpText>
    <label>Disable Leaderboard Refresh On Load</label>
    <type>Checkbox</type>
</CustomField>