force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Disable_Learning_Preview_Redirection__c.field-meta.xml
<CustomField>
    <fullName>redwing__Disable_Learning_Preview_Redirection__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to disable the automatic learning redirection when previewing learning content</inlineHelpText>
    <label>Disable Learning Preview Redirection</label>
    <type>Checkbox</type>
</CustomField>