force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Disable_Meeting_Provider_Notifications__c.field-meta.xml
<CustomField>
    <fullName>redwing__Disable_Meeting_Provider_Notifications__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Disable Meeting Provider Notifications</label>
    <type>Checkbox</type>
</CustomField>