force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Disable_Track_Achievements__c.field-meta.xml
<CustomField>
    <fullName>redwing__Disable_Track_Achievements__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to prevent automatic achievement assignment for track achievements</inlineHelpText>
    <label>Disable Track Achievements</label>
    <type>Checkbox</type>
</CustomField>