force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Disable_Track_Progress_Calculation__c.field-meta.xml
<CustomField>
    <fullName>redwing__Disable_Track_Progress_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to disable progress calculation for Learning Trac Assignments</inlineHelpText>
    <label>Disable Track Progress Calculation</label>
    <type>Checkbox</type>
</CustomField>