force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Disable_User_Certification_Uploads__c.field-meta.xml
<CustomField>
    <fullName>redwing__Disable_User_Certification_Uploads__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option if you&apos;d like to prevent users from uploading certifications</inlineHelpText>
    <label>Disable User Certification Uploads</label>
    <type>Checkbox</type>
</CustomField>