force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Disable_User_Trigger__c.field-meta.xml
<CustomField>
    <fullName>redwing__Disable_User_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to disable the LMS user trigger</inlineHelpText>
    <label>Disable User Trigger</label>
    <type>Checkbox</type>
</CustomField>