force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Display_All_ILT_Classes_On_Event_Detail__c.field-meta.xml
<CustomField>
    <fullName>redwing__Display_All_ILT_Classes_On_Event_Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, both registered and unregistered Classes will be displayed on ILT Event detail page</inlineHelpText>
    <label>Display all ILT Classes on Event Detail</label>
    <type>Checkbox</type>
</CustomField>