force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Display_ILT_Classes_On_My_Learning__c.field-meta.xml
<CustomField>
    <fullName>redwing__Display_ILT_Classes_On_My_Learning__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enable this option if you would like to show ILT Classes on Learning List component and account them in the counters on the Learning User Profile, My Team and My Team Overview components.</inlineHelpText>
    <label>Display ILT Classes on My Learning</label>
    <type>Checkbox</type>
</CustomField>