force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Enable_Emails_to_vILT_Account_Member__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_Emails_to_vILT_Account_Member__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Emails to vILT Account Member</label>
    <type>Checkbox</type>
</CustomField>