force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Enable_iOS_Tap_Fix__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_iOS_Tap_Fix__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option if you&apos;re experiencing issues with taps in Salesforce1 + iOS8</inlineHelpText>
    <label>Enable iOS Tap Fix</label>
    <type>Checkbox</type>
</CustomField>