force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Enable_Learning_Auto_Assignment__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_Learning_Auto_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Learning Auto-Assignment</label>
    <type>Checkbox</type>
</CustomField>