force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Enable_Learning_Object_Prereqs_Migration__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_Learning_Object_Prereqs_Migration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Learning Object Prereqs Migration</label>
    <type>Checkbox</type>
</CustomField>