force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Enable_Learning_Object_Sharing__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_Learning_Object_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to share learning objects with users</inlineHelpText>
    <label>Enable Learning Object Sharing</label>
    <type>Checkbox</type>
</CustomField>