force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Enable_Learning_Plans_Withdrawal__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_Learning_Plans_Withdrawal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Learning Plans Withdrawal</label>
    <type>Checkbox</type>
</CustomField>