force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Enable_Multi_Lang_Learning_Assignment__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_Multi_Lang_Learning_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Multi-Lang Learning Assignment</label>
    <type>Checkbox</type>
</CustomField>