force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Enable_Plan_Custom_Component__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_Plan_Custom_Component__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to enable custom components in Learning Plans</inlineHelpText>
    <label>Enable Plan Custom Component</label>
    <type>Checkbox</type>
</CustomField>