force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Enable_Previous_Version_Shared_Updates__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_Previous_Version_Shared_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to allow shared assignments learnings to be updated to previous versions</inlineHelpText>
    <label>Enable Previous Version Shared Updates</label>
    <type>Checkbox</type>
</CustomField>