force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Enable_Private_Attachments__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_Private_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to make uploaded Task Attachments private</inlineHelpText>
    <label>Enable Private Attachments</label>
    <type>Checkbox</type>
</CustomField>