force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Enable_Related_Learning_Assignment__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_Related_Learning_Assignment__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked, the Related Learning Assignment functionality will be enabled, otherwise Related Learnings will not be assigned even if the scheduled job is run.</inlineHelpText>
    <label>Enable Related Learning Assignment</label>
    <type>Checkbox</type>
</CustomField>