force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Enable_Zoom_Password__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_Zoom_Password__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Zoom Password</label>
    <type>Checkbox</type>
</CustomField>