force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Google_Maps_API_Key__c.field-meta.xml
<CustomField>
    <fullName>redwing__Google_Maps_API_Key__c</fullName>
    <description>URL path for your custom page</description>
    <inlineHelpText>Replace this value with your custom Google Maps API Key (https://console.developers.google.com)</inlineHelpText>
    <label>Google Maps API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>