force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Header_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>redwing__Header_Background_Color__c</fullName>
    <description>HEX value for the header background color. (e.g. #EEEEEE)</description>
    <inlineHelpText>HEX value for the header background color. (e.g. #EEEEEE)</inlineHelpText>
    <label>Header Background Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>