force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Hide_Certifications_Section__c.field-meta.xml
<CustomField>
    <fullName>redwing__Hide_Certifications_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to hide the certifications section in the achievements page</inlineHelpText>
    <label>Hide Certifications Section</label>
    <type>Checkbox</type>
</CustomField>