force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Hide_Community_Salesforce_Header__c.field-meta.xml
<CustomField>
    <fullName>redwing__Hide_Community_Salesforce_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to always hide the Salesforce headers in Communities and Portals</inlineHelpText>
    <label>Hide Salesforce Header in Communities</label>
    <type>Checkbox</type>
</CustomField>