force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Hide_Company_Logo__c.field-meta.xml
<CustomField>
    <fullName>redwing__Hide_Company_Logo__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to hide the header company logo</inlineHelpText>
    <label>Hide Company Logo</label>
    <type>Checkbox</type>
</CustomField>