force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Hide_Published_Content__c.field-meta.xml
<CustomField>
    <fullName>redwing__Hide_Published_Content__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to hide publish content from the Learning Publish page</inlineHelpText>
    <label>Hide Published Content</label>
    <type>Checkbox</type>
</CustomField>