force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Hide_Tracks_from_My_Training__c.field-meta.xml
<CustomField>
    <fullName>redwing__Hide_Tracks_from_My_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to hide Learning Tracs from My Learning</inlineHelpText>
    <label>Hide Tracs from My Learning</label>
    <type>Checkbox</type>
</CustomField>