force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Hide_Training_Catalog_Section__c.field-meta.xml
<CustomField>
    <fullName>redwing__Hide_Training_Catalog_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to hide entry points to the training catalog</inlineHelpText>
    <label>Hide Training Catalog Section</label>
    <type>Checkbox</type>
</CustomField>