force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Hide_Training_Plans_Progress_Info__c.field-meta.xml
<CustomField>
    <fullName>redwing__Hide_Training_Plans_Progress_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to hide Learning Plan progress info in the My Learning page</inlineHelpText>
    <label>Hide Learning Plans Progress Info</label>
    <type>Checkbox</type>
</CustomField>