force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Hide_Training_Tracks_Section__c.field-meta.xml
<CustomField>
    <fullName>redwing__Hide_Training_Tracks_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to hide entry points to Learning Tracs</inlineHelpText>
    <label>Hide Learning Tracs Section</label>
    <type>Checkbox</type>
</CustomField>