force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Hide_User_Menu__c.field-meta.xml
<CustomField>
    <fullName>redwing__Hide_User_Menu__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to hide the user menu from the app header</inlineHelpText>
    <label>Hide User Menu</label>
    <type>Checkbox</type>
</CustomField>