force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__ILT_Class_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>redwing__ILT_Class_Base_URL__c</fullName>
    <inlineHelpText>Absolute URL for the ILT Class page in your Community</inlineHelpText>
    <label>ILT Class Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>