force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__ILT_Roster_Processing_Interval__c.field-meta.xml
<CustomField>
    <fullName>redwing__ILT_Roster_Processing_Interval__c</fullName>
    <defaultValue>30</defaultValue>
    <inlineHelpText>Stores a value in minutes which indicates the frequency of running the ILT Roster job. If this field is empty, then by default an interval of 30 minutes is used.</inlineHelpText>
    <label>ILT Roster Processing Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>