force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__ILT_Rosters_Default_Account_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>redwing__ILT_Rosters_Default_Account_Object_Id__c</fullName>
    <label>ILT Rosters Default Account Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>