force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Is_Cloudforce_Domain__c.field-meta.xml
<CustomField>
    <fullName>redwing__Is_Cloudforce_Domain__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option if your org runs in a cloudforce.com domain</inlineHelpText>
    <label>Is Cloudforce Domain</label>
    <type>Checkbox</type>
</CustomField>