force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Learning_Activity_LEX_Page__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning_Activity_LEX_Page__c</fullName>
    <label>Learning Activity LEX Page</label>
    <length>60</length>
    <type>Text</type>
</CustomField>