force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Learning_Blur_Content_Preview__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning_Blur_Content_Preview__c</fullName>
    <inlineHelpText>Choose which content types should be previewed for users instead of played immediately.</inlineHelpText>
    <label>Learning Blur Content Preview</label>
    <length>255</length>
    <type>Text</type>
</CustomField>