force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Learning_Catalog_Builder_Field_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning_Catalog_Builder_Field_Set_Name__c</fullName>
    <inlineHelpText>Field Set on Catalog object to add additional fields to Detail tab in the Catalog builder.</inlineHelpText>
    <label>Learning Catalog Builder Field Set Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>